--- a/colorandtext.kv
+++ b/colorandtext.kv
@@ -4,12 +4,12 @@
         id: welcome_text
         font_size: 40
         size_hint_y: None
-        height: 200
+        height: 100
         text: root.text
     Label:
         id: points
         font_size: 20
-        sinze_hint_y: None
+        size_hint_y: None
         text: str(root.points_str)
     BoxLayout:
         Button:
