Possibility to choose the game mode

--- a/colorandtext.kv
+++ b/colorandtext.kv
@@ -1,5 +1,10 @@
 <BoxLayoutGame>:
     orientation: 'vertical'
+    Spinner:
+        id: spinner_game
+        size_hint_y: None
+        text:  root.mode_game
+        values: "Colours Mode", "Text Mode"
     Label:
         id: welcome_text
         font_size: 40
