--- a/colorandtext.kv
+++ b/colorandtext.kv
@@ -1,10 +1,14 @@
 <BoxLayoutGame>:
     orientation: 'vertical'
-    Spinner:
+    MySpinner:
         id: spinner_game
         size_hint_y: None
+        height: 100
         text:  root.mode_game
         values: "Colours Mode", "Text Mode"
+        background_color: [0.3, 0.06, 0.23, 1]
+        on_press: root.sound_play()
+        on_release: root.spinner_restart()
     Label:
         id: welcome_text
         font_size: 40
@@ -15,6 +19,7 @@
         id: points
         font_size: 20
         size_hint_y: None
+        height: 100
         text: str(root.points_str)
     BoxLayout:
         Button:
@@ -22,14 +27,22 @@
             text: root.texts[0]
             color: root.colors[0]
             font_size: 40
+            background_color: [0.11, 0.06, 0.23, 1]
             on_press: root.ask()
             on_press: root.start()
             on_press: root.count_points(0)
+            # Image:
+                # source: 'image.JPG'
+                # opacity: 0.4
+                # center_x: self.parent.center_x
+                # center_y: self.parent.center_y
+                # size: self.parent.size
         Button:
             id: bt2
             text: root.texts[1]
             color: root.colors[1]
             font_size: 40
+            background_color: [0.11, 0.06, 0.23, 1]
             on_press: root.ask()
             on_press: root.start()
             on_press: root.count_points(1)
@@ -39,6 +52,7 @@
             text: root.texts[2]
             color: root.colors[2]
             font_size: 40
+            background_color: [0.11, 0.06, 0.23, 1]
             on_press: root.ask()
             on_press: root.start()
             on_press: root.count_points(2)
@@ -47,6 +61,11 @@
             text: root.texts[3]
             color: root.colors[3]
             font_size: 40
+            background_color: [0.11, 0.06, 0.23, 1]
             on_press: root.ask()
             on_press: root.start()
             on_press: root.count_points(3)
+
+<MyButton>
+    background_color: [0.76, 0.255, 0.7, 1]
+    size_hint: 1, None
