--- a/colorandtext.kv
+++ b/colorandtext.kv
@@ -11,7 +11,7 @@
         on_release: root.spinner_restart()
     Label:
         id: welcome_text
-        font_size: 40
+        font_size: 30
         size_hint_y: None
         height: 100
         text: root.text
@@ -69,3 +69,4 @@
 <MyButton>
     background_color: [0.76, 0.255, 0.7, 1]
     size_hint: 1, None
+    on_press: root.sound()
