--- a/colorandtext.kv
+++ b/colorandtext.kv
@@ -1,29 +1,65 @@
 #:kivy 1.9.0
 
+BoxLayoutGame:
 <BoxLayoutGame>:
+    spacing: 5
     orientation: 'vertical'
-    MySpinner:
-        id: spinner_game
+    # padding: [5, 5, 5, 5]
+    # spacing: 5
+    # MySpinner:
+        # id: spinner_game
+        # size_hint_y: None
+        # height: 100
+        # text:  root.mode_game
+        # values: "Colours Mode", "Text Mode"
+        # background_color: [0.3, 0.06, 0.23, 1]
+        # on_press: root.sound_play()
+        # on_release: root.spinner_restart()
+    BoxLayout:
         size_hint_y: None
-        height: 100
-        text:  root.mode_game
-        values: "Colours Mode", "Text Mode"
-        background_color: [0.3, 0.06, 0.23, 1]
-        on_press: root.sound_play()
-        on_release: root.spinner_restart()
-    Label:
-        id: welcome_text
-        font_size: 30
+        spacing: 5
+        Button:
+            text: "Menu"
+            background_color: [0.3, 0.06, 0.23, 1]
+            on_press: root.go_start()
+            on_press: root.sound_play()
+            size_hint_y: None
+        Button:
+            size_hint_y: None
+            text: "Restart"
+            background_color: [0.3, 0.06, 0.23, 1]
+            on_press: root.sound_play()
+            on_press: root.replay()
+    BoxLayout:
         size_hint_y: None
-        height: 100
-        text: root.text
-    Label:
-        id: points
-        font_size: 20
+        padding: [1, 1, 1, 1]
+        spacing: 25
+        ProgressBar:
+            id: progress
+            value: root.value_progress_bar
+        BoxLayout:
+            Label:
+                text: " Mute/Unmute"
+            CheckBox:
+                on_press: root.sound_play()
+                on_active: root.self_active()
+    BoxLayout:
         size_hint_y: None
-        height: 100
-        text: str(root.points_str)
+        Label:
+            id: welcome_text
+            font_size: 20
+            size_hint_y: None
+            height: 100
+            text: root.text
+        Label:
+            id: points
+            font_size: 20
+            size_hint_y: None
+            height: 100
+            text: str(root.points_str)
     GridLayout:
+        spacing: [10, 10]
+        padding: [10, 10, 10, 10]
         cols: 2
         Button:
             id: bt1
@@ -66,27 +102,109 @@
     background_color: [0.76, 0.255, 0.7, 1]
     size_hint: 1, None
     on_press: root.sound()
+    Button:
+        text: "Start Colours Mode"
+    Button:
+        text: "Start Text Mode"
 
 <PopupWelcome>:
-    orientation: 'vertical'
-    BoxLayout:
-        pos: root.size
-        Label:
-            text: root.text
+    FloatLayout:
+        orientation: 'vertical'
+        background_color: [1, 1, 0, 1]
+        height: root.height
+        width: root.width + 100
+        spacing: 8
+        Button:
+            size: root.size
+            pos: root.pos
+            # text: root.text
+            background_color: [0.11, 0.055, 0.23, 1]
             font_size: 40
-            Image:
-                source: 'icon.png'
-                opacity: 0.4
-                center_x: self.parent.center_x
-                center_y: self.parent.center_y
-                size: self.parent.size
+            # Image:
+                # source: 'icon.png'
+                # opacity: 0.4
+                # center_x: self.parent.center_x
+                # center_y: self.parent.center_y
+                # size: self.parent.size
+        Label:
+            pos: 0, 250
+            font_size: 30
+            text: "Please choose a mode"
+        Button:
+            size_hint: 0.6, 0.15
+            pos_hint: {'center_x': 0.5, 'y': 0.5}
+            # pos: ((root.width * 1/5), root.height / 1.7)
+            background_color: [0.76, 0.255, 0.7, 1]
+            text: "Colours Mode"
+            on_press: root.start_color_mode()
+            on_press: root.sound_validation()
+            on_press: root.popup_open_change()
+            on_press: root.cancel()
+            on_press: root.reboot_progress_bar()
+        Button:
+            size_hint: 0.6, 0.15
+            pos_hint: {'center_x': 0.5, 'y': 0.3}
+            background_color: [0.76, 0.255, 0.7, 1]
+            text: "Text Mode"
+            on_press: root.start_text_mode()
+            on_press: root.sound_validation()
+            on_press: root.popup_open_change()
+            on_press: root.cancel()
+            on_press: root.reboot_progress_bar()
+        Button:
+            size_hint: 0.6, 0.15
+            pos_hint: {'center_x': 0.5, 'y': 0.1}
+            # pos: ((root.width * 1/5), root.height / 7)
+            background_color: [0.76, 0.1, 0, 2]
+            text: "Exit"
+            on_press: root.leave()
+
+<LeavePopup>:
+    orientation: 'vertical'
+    Button:
+        pos: root.size
+        text: root.text
+        background_color: [0.11, 0.055, 0.23, 1]
+        font_size: 40
     BoxLayout:
         size_hint_y: None
         Button:
             background_color: [0.76, 0.255, 0.7, 1]
-            text: "Colours Mode"
-            on_press: root.cancel()
+            text: "Yes"
+            on_press: root.leave()
         Button:
-            background_color: [0.76, 0.255, 0.7, 1]
-            text: "Text Mode"
+            background_color: [0.5, 0, 0, 1]
+            text: "No"
             on_press: root.cancel()
+
+<XBoxLayout>:
+    FloatLayout:
+        canvas.before:
+            Color:
+                rgba: 0.11, 0.055, 0.23, 1
+            Rectangle:
+                pos: self.pos
+                size: self.size
+        size: root.size
+        pos: root.pos
+        orientation: 'vertical'
+        Label:
+            pos_hint: {'center_x': 0.5, 'y': 0.4}
+            font_size: 20
+            text: root.text
+        Label:
+            pos_hint: {'center_x': 0.5, 'y': 0.3}
+            font_size: 20
+            text: root.text2
+        Label:
+            pos_hint: {'center_x': 0.5, 'y': 0.1}
+            font_size: 20
+            text: root.text3
+        Button:
+            pos_hint: {'center_x': 0.5, 'y': 0.1}
+            size_hint: 0.6, 0.15
+            background_color: [0.76, 0.255, 0.7, 1]
+            text: "Ok"
+            on_press: root.cancel()
+            on_press: root.replay()
+            on_press: root.reboot_progress_bar()
