Add penality points

--- a/colorandtext.kv
+++ b/colorandtext.kv
@@ -137,17 +137,30 @@
         pos: root.pos
         orientation: 'vertical'
         Label:
-            pos_hint: {'center_x': 0.5, 'y': 0.4}
+            pos_hint: {'center_x': 0.5, 'y': 0.45}
             font_size: 20
             text: root.text
         Label:
-            pos_hint: {'center_x': 0.5, 'y': 0.3}
+            pos_hint: {'center_x': 0.5, 'y': 0.35}
             font_size: 20
             text: root.text2
         Label:
-            pos_hint: {'center_x': 0.5, 'y': 0.1}
+            pos_hint: {'center_x': 0.5, 'y': 0.25}
             font_size: 20
             text: root.text3
+        Label:
+            pos_hint: {'center_x': 0.5, 'y': 0.15}
+            font_size: 20
+            text: root.text4
+        Label:
+            pos_hint: {'center_x': 0.5, 'y': 0.1}
+            font_size: 20
+            text: root.text5
+        Label:
+            pos_hint: {'center_x': 0.5, 'y': 0.02}
+            font_size: 20
+            text: root.text6
+
         Button:
             pos_hint: {'center_x': 0.5, 'y': 0.1}
             size_hint: 0.6, 0.15
