--- a/braincolorgame.kv
+++ b/braincolorgame.kv
@@ -97,55 +97,55 @@
                 font_size: 40
                 background_color: [0.11, 0.06, 0.23, 1]
                 on_press: app.text_2 = str(root.t_final_no_penality)
-                on_press: app.text_3 = str(root.no_points)
-                on_press: app.text_4 = str(root.time_penality)
+                on_press: app.text_4 = str(int(app.text_3)*3)
                 on_press: app.text_5 = str(root.t_final)
                 on_press: app.text_6 = str(root.records) + str(root.t_best)
                 on_press: root.ask()
                 on_press: root.start()
                 on_press: root.count_points(0)
+                on_press: app.text_3 = str(root.no_points)
             Button:
                 id: bt2
                 text: root.texts[1]
                 color: root.colors[1]
                 font_size: 40
                 background_color: [0.11, 0.06, 0.23, 1]
-                on_press: app.text_2 = str(root.points)
-                on_press: app.text_3 = str(root.no_points)
-                on_press: app.text_4 = str(root.time_penality)
+                on_press: app.text_2 = str(root.t_final_no_penality)
+                on_press: app.text_4 = str(int(app.text_3)*3)
                 on_press: app.text_5 = str(root.t_final)
                 on_press: app.text_6 = str(root.records) + str(root.t_best)
                 on_press: root.ask()
                 on_press: root.start()
                 on_press: root.count_points(1)
+                on_press: app.text_3 = str(root.no_points)
             Button:
                 id: bt3
                 text: root.texts[2]
                 color: root.colors[2]
                 font_size: 40
                 background_color: [0.11, 0.06, 0.23, 1]
-                on_press: app.text_2 = str(root.points)
-                on_press: app.text_3 = str(root.no_points)
-                on_press: app.text_4 = str(root.time_penality)
+                on_press: app.text_2 = str(root.t_final_no_penality)
+                on_press: app.text_4 = str(int(app.text_3)*3)
                 on_press: app.text_5 = str(root.t_final)
                 on_press: app.text_6 = str(root.records) + str(root.t_best)
                 on_press: root.ask()
                 on_press: root.start()
                 on_press: root.count_points(2)
+                on_press: app.text_3 = str(root.no_points)
             Button:
                 id: bt4
                 text: root.texts[3]
                 color: root.colors[3]
                 font_size: 40
                 background_color: [0.11, 0.06, 0.23, 1]
-                on_press: app.text_2 = str(root.points)
-                on_press: app.text_3 = str(root.no_points)
-                on_press: app.text_4 = str(root.time_penality)
+                on_press: app.text_2 = str(root.t_final_no_penality)
+                on_press: app.text_4 = str(int(app.text_3)*3)
                 on_press: app.text_5 = str(root.t_final)
                 on_press: app.text_6 = str(root.records) + str(root.t_best)
                 on_press: root.ask()
                 on_press: root.start()
                 on_press: root.count_points(3)
+                on_press: app.text_3 = str(root.no_points)
 
 <WinScreen>:
     FloatLayout:
