Instiate sound_game and sound_win with the App

--- a/braincolorgame.kv
+++ b/braincolorgame.kv
@@ -191,3 +191,4 @@
             background_color: [0.76, 0.255, 0.7, 1]
             text: "Ok"
             on_press: root.manager.current = 'game'
+            on_press: root.sound_stop()
