--- a/braincolorgame.kv
+++ b/braincolorgame.kv
@@ -79,6 +79,7 @@
                 font_size: 20
                 size_hint_y: None
                 height: 100
+                # text: root.text
                 text: root.text
             Label:
                 id: points
@@ -86,12 +87,14 @@
                 size_hint_y: None
                 height: 100
                 text: str(root.points_str)
-        GridLayout:
-            spacing: [10, 10]
-            padding: [10, 10, 10, 10]
-            cols: 2
+        FloatLayout:
+            # spacing: [10, 10]
+            # padding: [10, 10, 10, 10]
+            # cols: 2
             Button:
                 id: bt1
+                size_hint: 0.5, 0.4
+                pos_hint: {'x': 0, 'y': 0}
                 text: root.texts[0]
                 color: root.colors[0]
                 font_size: 40
@@ -106,6 +109,9 @@
                 on_press: app.text_3 = str(root.no_points)
             Button:
                 id: bt2
+                size_hint: 0.5, 0.4
+                # size: root.width/4, root.height/4
+                pos_hint: {'x': 0.5, 'y': 0.6}
                 text: root.texts[1]
                 color: root.colors[1]
                 font_size: 40
@@ -120,6 +126,9 @@
                 on_press: app.text_3 = str(root.no_points)
             Button:
                 id: bt3
+                size_hint: 0.5, 0.4
+                # size: root.width/8, root.height/8
+                pos_hint: {'x': 0.5, 'y': 0}
                 text: root.texts[2]
                 color: root.colors[2]
                 font_size: 40
@@ -134,6 +143,9 @@
                 on_press: app.text_3 = str(root.no_points)
             Button:
                 id: bt4
+                size_hint: 0.5, 0.4
+                # size: root.width/4, root.height/4
+                pos_hint: {'x': 0, 'y': 0.6}
                 text: root.texts[3]
                 color: root.colors[3]
                 font_size: 40
@@ -146,6 +158,16 @@
                 on_press: root.start()
                 on_press: root.count_points(3)
                 on_press: app.text_3 = str(root.no_points)
+            Button:
+                id: bt_q
+                background_color: [0.76, 0.255, 0.7, 1]
+                text: root.text_button
+                on_press: root.ask()
+                on_press: root.start()
+                on_press: root.count_points(5)
+                font_size: 40
+                size_hint: 0.3, 0.3
+                pos_hint: {'center_x': 0.5, 'center_y': 0.5}
 
 <WinScreen>:
     FloatLayout:
