--- a/braincolorgame.kv
+++ b/braincolorgame.kv
@@ -1,49 +1,159 @@
 #:kivy 1.9.0
+#:import os os
+<MenuScreenRepeat>:
+    # orientation: 'horizontal'  # or not
+    Image:
+        source: os.getcwd() + "/CR_fond_Landscape.png"
+    FloatLayout:
+        ButtonStart:
+            # source: os.getcwd() + "/button_start.png"
+            source: os.getcwd() + "/Button-Repeat-Mode-Easiest.png"
+            pos_hint: {'center_x': 0.5, 'center_y': 0.75}
+            size_hint: 0.3, 0.1
+            text: "Start"
+            on_press: root.manager.current = 'game-repeat'
+            on_press: root.manager.get_screen('game-repeat').start_started(1)
+            on_press: root.manager.get_screen('game-repeat').ini()
+            on_press: root.manager.get_screen('game-repeat').easy()
+            on_press: root.manager.get_screen('game-repeat').remember()
+        ButtonStart:
+            source: os.getcwd() + "/Button-Repeat-Mode-Easy.png"
+            pos_hint: {'center_x': 0.5, 'center_y': 0.6}
+            size_hint: 0.3, 0.1
+            text: "Start"
+            on_press: root.manager.current = 'game-repeat'
+            on_press: root.manager.get_screen('game-repeat').start_started(1)
+            on_press: root.manager.get_screen('game-repeat').ini()
+            on_press: root.manager.get_screen('game-repeat').hard()
+            on_press: root.manager.get_screen('game-repeat').remember()
+        ButtonStart:
+            source: os.getcwd() + "/Button-Repeat-Mode-Medium.png"
+            pos_hint: {'center_x': 0.5, 'center_y': 0.4}
+            size_hint: 0.3, 0.1
+            text: "Start"
+            on_press: root.manager.current = 'game-repeat'
+            on_press: root.manager.get_screen('game-repeat').start_started(1)
+            on_press: root.manager.get_screen('game-repeat').ini()
+            on_press: root.manager.get_screen('game-repeat').easy()
+            on_press: root.manager.get_screen('game-repeat').forgot()
+        ButtonStart:
+            source: os.getcwd() + "/Button-Repeat-Mode-Hard.png"
+            pos_hint: {'center_x': 0.5, 'center_y': 0.2}
+            size_hint: 0.3, 0.1
+            text: "Start"
+            on_press: root.manager.current = 'game-repeat'
+            on_press: root.manager.get_screen('game-repeat').start_started(1)
+            on_press: root.manager.get_screen('game-repeat').ini()
+            on_press: root.manager.get_screen('game-repeat').hard()
+            on_press: root.manager.get_screen('game-repeat').forgot()
+
+<GameScreenRepeat>:
+    GridLayout:
+        cols: 2
+        Button:
+            id: bt1
+            background_color: root.colours['red']
+            on_press: root.bt1_pressed()
+        Button:
+            id: bt2
+            background_color: root.colours['blue']
+            on_press: root.bt2_pressed()
+        Button:
+            id: bt3
+            background_color: root.colours['yellow']
+            on_press: root.bt3_pressed()
+        Button:
+            id: bt4
+            background_color: root.colours['green']
+            on_press: root.bt4_pressed()
 
 <MenuScreen>:
+    Image:
+        source: os.getcwd() + "/BCG_fond.png"
     FloatLayout:
+
         orientation: 'vertical'
         background_color: [1, 1, 0, 1]
         height: root.height
         width: root.width + 100
         spacing: 8
-        canvas.before:
-            Color:
-                rgba: 0.11, 0.055, 0.23, 1
-            Rectangle:
-                size: self.size
-                pos: self.pos
-        Label:
-            pos_hint: {'center_x': 0.48, 'y': 0.4}
-            font_size: 30
-            text: "Please choose a mode"
-        Button:
-            size_hint: 0.6, 0.15
-            pos_hint: {'center_x': 0.5, 'y': 0.5}
-            background_color: [0.76, 0.255, 0.7, 1]
-            text: "Colours Mode"
-            # on_press: root.restart()
+        #canvas.before:
+         #   Color:
+          #      rgba: 0.11, 0.055, 0.23, 1
+           # Rectangle:
+            #    # source: os.getcwd() + "/BCG_fond.png"
+             #   size: self.size
+              #  pos: self.pos
+        # Label:
+            # pos_hint: {'center_x': 0.48, 'y': 0.4}
+            # font_size: 30
+            # text: "Please choose a mode"
+            # text: ""
+        BoxLayout:
+            Label:
+                pos_hint: {'center_x': 0.5, 'y': 0.4}
+                font_size: 18
+                text: " Mute/Unmute"
+            CheckBox:
+                pos_hint: {'center_x': 0.5, 'y': 0.4}
+                # on_press: root.sound_play()
+                on_press: root.manager.get_screen('game').sound_play()
+                # on_active: GameScreen.self_active()
+                on_active: root.manager.get_screen('game').self_active()
+
+        ButtonColours:
+            source: os.getcwd() + ("/Button-Colours-Mode.png")
+            pos_hint: {'center_x': 0.5, 'y': 0.6}
+            size_hint: 0.7, 0.20
+            on_press: root.sound_validation()
+            on_press: root.manager.current = 'game'
             on_press: root.start_color_mode()
-            on_press: root.sound_validation()
-            # on_press: GameScreen().reboot_progress_bar()
-            on_press: root.manager.current = 'game'
-        Button:
-            size_hint: 0.6, 0.15
-            pos_hint: {'center_x': 0.5, 'y': 0.3}
-            background_color: [0.76, 0.255, 0.7, 1]
-            text: "Text Mode"
-            # on_press: root.restart()
-            on_press: root.sound_validation()
-            # on_press: root.reboot_progress_bar()
-            on_press: root.manager.current = 'game'
+        ButtonText:
+            source: os.getcwd() + ("/Button-Text-Mode.png")
+            pos_hint: {'center_x': 0.5, 'y': 0.4}
+            size_hint: 0.7, 0.20
             on_press: root.start_text_mode()
-        Button:
-            size_hint: 0.6, 0.15
-            pos_hint: {'center_x': 0.5, 'y': 0.1}
-            # pos: ((root.width * 1/5), root.height / 7)
-            background_color: [0.76, 0.1, 0, 2]
-            text: "Exit"
+            on_press: root.sound_validation()
+            on_press: root.manager.current = 'game'
+        ButtonMenuRepeat:
+            # source: os.getcwd() + "/button_start.png"
+            source: os.getcwd() + "/Button-Repeat-Mode.png"
+            pos_hint: {'center_x': 0.5, 'y': 0.2}
+            size_hint: 0.7, 0.20
+            on_press: root.manager.current = 'menu-repeat'
+        ButtonExit:
+            source: os.getcwd() + ("/Button-Exit.png")
+            pos_hint: {'center_x': 0.5, 'y': 0}
+            size_hint: 0.6, 0.25
             on_press: root.leave()
+
+        # Button:
+            # size_hint: 0.5, 0.12
+            # pos_hint: {'center_x': 0.5, 'y': 0.5}
+            # background_color: [0.76, 0.255, 0.7, 1]
+            # text: "Colours Mode"
+            # on_press: root.restart()
+            # on_press: root.start_color_mode()
+            # on_press: root.sound_validation()
+            # on_press: GameScreen().reboot_progress_bar()
+            # on_press: root.manager.current = 'game'
+        # Button:
+            # size_hint: 0.5, 0.12
+            # pos_hint: {'center_x': 0.5, 'y': 0.3}
+            # background_color: [0.76, 0.255, 0.7, 1]
+            # text: "Text Mode"
+            # on_press: root.restart()
+            # on_press: root.sound_validation()
+            # on_press: root.reboot_progress_bar()
+            # on_press: root.manager.current = 'game'
+            # on_press: root.start_text_mode()
+        # Button:
+            # size_hint: 0.5, 0.12
+            # pos_hint: {'center_x': 0.5, 'y': 0.1}
+            # pos: ((root.width * 1/5), root.height / 7)
+            # background_color: [0.76, 0.1, 0, 2]
+            # text: "Exit"
+            # on_press: root.leave()
 
 <GameScreen>:
     BoxLayout:
@@ -172,47 +282,47 @@
                 pos_hint: {'center_x': 0.5, 'center_y': 0.5}
 
 <WinScreen>:
+    Image:
+        source: os.getcwd() + "/BCG_fond.png"
     FloatLayout:
-        canvas.before:
-            Color:
-                rgba: 0.11, 0.055, 0.23, 1
-            Rectangle:
-                pos: self.pos
-                size: self.size
+        # canvas.before:
+          #  Color:
+           #     rgba: 0.11, 0.055, 0.23, 1
+            #Rectangle:
+             #   pos: self.pos
+              #  size: self.size
         size: root.size
         pos: root.pos
         orientation: 'vertical'
         Label:
-            pos_hint: {'center_x': 0.5, 'y': 0.45}
+            pos_hint: {'center_x': 0.5, 'y': 0.35}
             font_size: 20
             text: "You win !"
         Label:
-            pos_hint: {'center_x': 0.5, 'y': 0.35}
+            pos_hint: {'center_x': 0.5, 'y': 0.28}
             font_size: 20
             text: root.text_2
             text: "time: " + app.text_2 + " seconds"
         Label:
             id: label_3
-            pos_hint: {'center_x': 0.5, 'y': 0.25}
+            pos_hint: {'center_x': 0.5, 'y': 0.20}
             font_size: 20
             text: "Miss: " + app.text_3
         Label:
-            pos_hint: {'center_x': 0.5, 'y': 0.15}
+            pos_hint: {'center_x': 0.5, 'y': 0.10}
             font_size: 20
             text: "Penality: 3x" + app.text_3 + " = " + app.text_4 + " seconds"
         Label:
-            pos_hint: {'center_x': 0.5, 'y': 0.1}
+            pos_hint: {'center_x': 0.5, 'y': 0.0}
             font_size: 20
             text: "Time final: " + app.text_5 + " seconds"
         Label:
-            pos_hint: {'center_x': 0.5, 'y': 0.02}
+            pos_hint: {'center_x': 0.5, 'y': -0.2}
             font_size: 20
             text: app.text_6
-
-        Button:
+        ButtonOk:
+            source: os.getcwd() + ("/Button-Ok.png")
             pos_hint: {'center_x': 0.5, 'y': 0.1}
-            size_hint: 0.6, 0.15
-            background_color: [0.76, 0.255, 0.7, 1]
-            text: "Ok"
+            size_hint: 0.5, 0.12
             on_press: root.manager.current = 'game'
             on_press: root.sound_stop()
